--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,60 @@ body,h1,h2,h3,h4,h5,h6 {
     margin: 0;
     padding: 0;
 }
- html {
-     font-family: 'Raleway', sans-serif;
+
+ body {
+    box-sizing: border-box;
+    font-family: 'Raleway', sans-serif;
+    margin: 0 auto;
+    width: 1100px;
  }
+ 
+.header {
+    height: 293px;
+    display: grid;
+    grid-template-columns: 1fr 148px 1fr;
+    justify-content: space-around;
+    align-content: center;
+    padding: 0 50px;
+}
+
+.header_menu {
+    margin: 0;
+    height: 100px;
+    gap: 27px;
+    display: flex;
+    align-items: center;
+    padding-left: 0;
+    list-style-type: circle;
+}
+
+.header_menu_item {
+    font-weight: 400;
+    font-size: 18px;
+}
+
+a {
+    color: black;
+}
+
+.header_menu_item:hover, a:hover {
+    list-style-type: none;
+    text-decoration: none;
+}
+
+.logo {
+    width: 148px;
+}
+.addresses{
+    justify-self: end;
+}
+.addresses_link {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.address_item a {
+        font-weight: 400;
+        font-size: 18px;
+}
