сделал section lots

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body,h1,h2,h3,h4,h5,h6 {
+body,h1,h2,h3,h4,h5,h6,ul {
     margin: 0;
     padding: 0;
 }
@@ -130,3 +130,68 @@ a {
     font-size: 22px;
     line-height: 100%;
 }
+
+.lots {
+    margin: 180px 24px 0 24px;
+}
+
+.lots_heading {
+    margin: 0 0 27px 40px;
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+.lots__card-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    list-style-type: none;
+}
+.card {
+    width: 334px;
+    min-height: 596px;
+}
+
+.card .blakout {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.card_type_film{
+    background: url(../img/photo.jpg) center center/cover no-repeat;
+}
+
+.card_type_book {
+    background: url(../img/book.jpg) center center/cover no-repeat;
+}
+ 
+.card_type_picture {
+    background: url(../img/paitng.jpg) center center/cover no-repeat;
+}
+
+.card__title {
+    display: block;
+    padding: 48px 40px 0 40px;
+    color: white;
+    font-weight: 700;   
+    font-size: 22px;
+    text-transform: uppercase;
+}
+
+.card__text {
+    padding: 0 40px 48px 40px;
+    font-weight: 400;
+    font-size: 20px;
+    color: white;
+}
+
+.lots__look-more-link {
+    display: inline-block;
+    margin: 30px 0 0 40px;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+
