--- a/css/style.css
+++ b/css/style.css
@@ -222,3 +222,36 @@ a {
     font-weight: 400;
     font-size: 24px;
 }
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    min-height: 180px;
+    margin: 180px 50px 0 50px;
+}
+
+.addresses_footer {
+    justify-self: start;
+}
+
+.footer_menu {
+    list-style-type: none;
+    flex-direction: column;
+    gap: 0;
+}
+
+.footer_social-items {
+    width: 240px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer_social-list {
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+    width: 48px;
+    height: 48px;
+    border: 1px solid black;
+    border-radius: 100%;
+}
